<resources>
    <string name="app_name">finalproject</string>
    <string name="retake">Retake</string>
    <string name="add_info">Add Info</string>
    <string name="post">POST</string>
    <string name="feed">Feed</string>
    <string name="camera">Camera</string>
    <string name="profile">Profile</string>
    <string name="confirmation_image_description">Confirmation Image</string>
    <string name="location">Location</string>
    <string name="enter_caption">Enter caption</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="search_friends">Search friends by username</string>
    <string name="add_friend">Add Friend</string>
</resources>