<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!-- Close Button (X) -->
    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_close_24"
        android:contentDescription="@string/close"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Search Field (EditText) -->
    <EditText
        android:id="@+id/addFriendsEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/search_friends"
        android:inputType="text"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/closeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Add Friend Button -->
    <Button
        android:id="@+id/addFriendButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_friend"
        app:layout_constraintTop_toBottomOf="@id/addFriendsEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>